--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <style>
+      #app {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+    </style>
+    <div id="app">
+      <div id="ui"></div>
+      <canvas id="game"></canvas>
+    </div>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
